feat(core): 添加Spring HTTP客户端支持并优化代码生成
- 添加Spring HTTP Exchange注解元工厂支持
- 在ClientProviderType中增加SPRING_HTTP类型定义
- 更新测试配置以包含新的HTTP客户端测试
- 优化SpringCloudFeignClientPostProcessor实现细节
- 修复媒体类型映射处理逻辑
- 移除无用的OrderServiceGetOrder32Req接口生成
- 添加Spring HTTP客户端代码生成模板
- 修复枚举类型判断逻辑